# XOLO

./: .gitignore  README.md  package-lock.json  package.json  reddit-post.md  tsconfig.json  vite.config.ts
docs/: CEF_API_EXAMPLES_RU.md  CEF_FIX_ICU_ERROR_RU.md  CEF_INTEGRATION_RU.md  CEF_QUICKSTART_RU.md  CHANGELOG_GOOGLE_FIX.md  COMPARISON.md  FAQ_TAURI.md  FIX_WHITE_SCREEN_RU.md  GOOGLE_AUTH_INFO.md  GOOGLE_LOGIN_RU.md  ICONS_README.md  IFRAME_LIMITATIONS.md  LAUNCH_GUIDE_RU.md  MIGRATION_CHECKLIST.md  MIGRATION_SURFER.md  MIGRATION_TAURI.md  MIGRATION_TO_CEF_RU.md  QUICKSTART_TAURI.md  README_TAURI.md  Z_INDEX_HIERARCHY.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cef_commands.rs  cef_wrapper.rs  commands.rs  downloads.rs  main.rs  oauth.rs  storage.rs
src-tauri/src/scripts/: mod.rs  page_observer.js
src-tauri/src/storage/: bookmarks.rs  history.rs  import.rs  mod.rs  session.rs  settings.rs
src-tauri/src/webview_manager/: commands.rs  manager.rs  mod.rs  polling.rs  types.rs
src-tauri/src/webview_manager/commands/: info.rs  lifecycle.rs  misc.rs  mod.rs  navigation.rs  visibility.rs
src/renderer/: App.tsx  cef-api.ts  index.html  main.tsx  tauri-api.ts  vite-env.d.ts
src/renderer/components/: AddressBar.css  AddressBar.tsx  AppModals.tsx  CefViewContainer.tsx  DownloadsPage.css  DownloadsPage.tsx  GoogleAuth.css  GoogleAuth.tsx  HistoryPage.css  HistoryPage.tsx  ImportDialog.css  ImportDialog.tsx  NewTabModal.css  NewTabModal.tsx  SettingsPage.css  SettingsPage.tsx  StartPage.css  StartPage.tsx  TabBar.css  TabBar.tsx  TabSearch.tsx  TitleBar.css  TitleBar.tsx  Toast.css  Toast.tsx  UpdateBanner.tsx  WebView2Container.tsx  WebViewContainer.tsx  ZenSidebar.css  ZenSidebar.tsx
src/renderer/components/AddressBar/: AddressBar.tsx
src/renderer/components/Downloads/: DownloadIndicator.tsx  DownloadsPage.tsx
src/renderer/components/History/: HistoryPage.tsx
src/renderer/components/Import/: ImportDialog.tsx
src/renderer/components/Notifications/: Toast.tsx
src/renderer/components/QuickSites/: QuickSitesPage.tsx
src/renderer/components/StartPage/: StartPage.tsx
src/renderer/components/Tabs/: NewTabModal.tsx  TabBar.tsx  TabSearch.tsx
src/renderer/components/TitleBar/: TitleBar.tsx
src/renderer/components/WebView/: WebView2Container.tsx  WebViewArea.tsx
src/renderer/components/WelcomePage/: WelcomePage.tsx
src/renderer/components/ZenSidebar/: ZenSidebar.tsx  constants.ts  hooks.ts  icons.tsx  index.ts  types.ts
src/renderer/components/settings/: SearchEngineIcons.tsx  SettingsComponents.tsx  SettingsPage.tsx  constants.ts  index.ts  types.ts
src/renderer/constants/: index.ts
src/renderer/hooks/: README.md  index.ts  useAppState.ts  useBookmarks.ts  useHistory.ts  useNavigation.ts  useSession.ts  useShortcuts.ts  useStartPageData.ts  useTabMemory.ts  useTabThumbnails.ts  useTranslation.ts  useWallpaper.ts  useWebViewVisibility.ts  useWorkspaces.ts  useZoom.ts
src/renderer/i18n/: de.ts  en.ts  es.ts  fr.ts  index.ts  ru.ts  translations.ts  types.ts
src/renderer/styles/: App.css  animations.css  global.css
src/renderer/styles/components/: address-bar.css  banners.css  clock-widget.css  download-indicator.css  frozen-tab.css  new-tab-modal.css  quick-sites.css  quicksites-page.css  search-box.css  tab-search.css  weather-widget.css  (+2 more)
src/renderer/types/: index.ts
src/renderer/utils/: url.ts
(+80 files in other folders)
